
	* src/na/na-gconf.c:
	Temporarily suspend test of writability status.

	* src/nact/nact-action-conditions-editor.c:
	* src/nact/nact-action-conditions-editor.h:
	* src/nact/nact-action-profiles-editor.c:
	* src/nact/nact-action-profiles-editor.h:
	* src/nact/nact-profile-conditions-editor.c:
	* src/nact/nact-profile-conditions-editor.h:
	Definitive names for dialog management.

	* src/nact/nact-iprofile-conditions.c:
	* src/nact/nact-iprofile-conditions.h:
	IActionConditions interface is renamed as IProfileConditions.

	* src/nact/Makefile.am:
	Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h:
	initial_load_toplevel, runtime_init_toplevel, all_widgets_showed:
	new functions.
	
	* src/nact/nact-imenu-item.c:
	signal_recorded: new function.

	* src/nact/nact-main-window.c:
	Implement initial_load_toplevel and runtime_init_toplevel
	functions.

	* src/nact/nact-window.c:
	nact_window_on_signal_recorded: new function.

2009-06-26 Pierre Wieser <pwieser@trychlos.org>

	Migration to GtkBuilder.
	IPivotContainer interface definition.
	IActionConditions and IMenuItem UI interface definitions.

	* configure.ac:
	Update Gtk+ dependancy to 2.12 to have gtk_builder functions.
	Remove libglade dependancy.

	* src/common/na-action-profile.c:
	* src/common/na-action.c:
	* src/common/na-gconf.c:
	* src/common/na-object.c:
	* src/common/na-pivot.c
	(instance_dispose): g_free( self->private ).

	* src/common/na-gconf.c:
	Fix typo in comment.

	* src/common/na-iio-provider.c:
	Actions list is now automatically sorted by label.

	* src/common/na-iio-provider.h:
	Move signal definition here to be usable by providers.

	* src/common/na-ipivot-container.c:
	* src/common/na-ipivot-container.h: New files.

	* src/common/na-pivot.c:
	na_pivot_get_label_sorted_actions: Removed function.
	na_pivot_add_notified, free_containers: New functions.
	Remove PROP_NOTIFIED property.
	Containers to be notified can be several to many, instead of
	just only one.